@@ -1,4 +1,5 @@
-* Convert t/01basic.t to Test::More and modernised it.
+* Converted t/01basic.t to Test::More and modernised it.
+* Converted t/02weird.t to Test::More and modernised it.
 
 Version 2.52:   ( Sun Jun 28 16:16:09 IDT 2009 )
 ------------------------------------------------
